# wildpaw-arena

./: .gitattributes  .gitignore  01_게임비전_코어루프.md  02_캐릭터_무기_전투디자인.md  03_아트_월드_UX가이드.md  04_서버_네트워크_아키텍처.md  05_매출화_BM_라이브옵스.md  06_개발로드맵_팀구성_리스크.md  07_실행_스캐폴드_가이드.md  07_클라이언트_구현_상세가이드.md  08_매치메이킹_랭크_시스템_상세.md  09_경제_진행_수치_상세.md  10_데이터_텔레메트리_AB테스트_스펙.md  11_전투_상성_카운터매트릭스_TTK_시뮬레이션.md  12_레벨디자인_RnD_컨셉_구성요소_배치가이드.md  13_레벨_상세_블록아웃_명세서.md  18_캐릭터_무기_전투_클라이언트_개발계획서.md  19_게임플로우_온보딩_로비_매칭_드래프트_UXUI_상세.md  20_게임플로우_API_이벤트_서버계약서.md  21_UXUI_화면별_컴포넌트_상세명세서.md  22_미업로드_기획서_통합요약.md  23_레벨_블록아웃_기반_클라이언트_개발명세서_및_계획서.md  24_매칭실패_대체봇_RL_설계_MDP_리워드_학습_시뮬레이션.md  AGENTS.md  ASSET_STRATEGY.md  AUTOMATION_SCOPE.md  LINEAR_ISSUE_TEMPLATE.md  README.md  STATUS.md  WORKFLOW.md
docs/: README.md  ai-agent-game-dev-guidelines-case-facegood-audio2face.md  ai-agent-game-dev-guidelines-team-one-page.md  ai-agent-game-dev-guidelines-team-one-page.pptx  ai-agent-game-dev-guidelines-use-cases.md  ai-agent-game-dev-guidelines.md  ai-game-dev-guidelines-team-one-page.md  ai-game-dev-guidelines-team-one-page.pptx  ai-game-dev-guidelines-use-cases.md  ai-game-dev-guidelines.md
scripts/: bootstrap.sh  check.sh  generate_protocol.sh  smoke.sh
server/: README.md  (+3 more)
server/room/: CMakeLists.txt
server/room/config/: combat_rules.json
server/room/include/room/: combat_rule_table.hpp  envelope_meta.hpp  input_buffer.hpp  interest_manager.hpp  room_session.hpp  room_simulation.hpp  snapshot_builder.hpp  wire_binary.hpp  wire_flatbuffers.hpp  wire_json.hpp
server/room/src/: combat_rule_table.cpp  input_buffer.cpp  interest_manager.cpp  main.cpp  room_session.cpp  room_simulation.cpp  snapshot_builder.cpp  wire_binary.cpp  wire_flatbuffers.cpp  wire_json.cpp
(+175 files in other folders)
